[package]
name = "codemap"
version = "0.1.2"
authors = ["Kevin Mehall <km@kevinmehall.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kevinmehall/codemap"
documentation = "https://docs.rs/codemap"
description = """
A data structure for efficiently storing source code position and span information
(e.g. in a compiler AST), and mapping it back to file/line/column locations for error
reporting and suggestions.
"""
readme = "README.md"
categories = ["data-structures"]
keywords = ["source", "position", "compiler", "sourcemap", "rustc"]

[badges]
travis-ci = { repository = "kevinmehall/codemap" }
